# Shatter

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.jsx  App.module.css  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: DropZone.jsx  DropZone.module.css  ExportLog.jsx  ExportLog.module.css  FileList.jsx  FileList.module.css  StatCard.module.css  TagInput.jsx  TagInput.module.css
src/lib/: docxBuilder.js  fileUtils.js  mdBuilder.js  pdfBuilder.js  txtBuilder.js
