[package]
name = "docx-exporter"
version = "1.0.0"
description = "Export project source files as split Word documents"
authors = ["you"]
edition = "2021"

[lib]
name = "docx_exporter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "docx-exporter"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
